--- a/backend/package.json
+++ b/backend/package.json
@@ -1,41 +1,41 @@
 {
   "name": "mern-senior-backend",
   "version": "1.0.0",
-  "description": "Backend server for MERN Senior project",
-  "main": "dist/server.js",
+  "description": "Backend for MERN Senior project",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "cross-env NODE_ENV=development nodemon src/server.ts",
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles",
-    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "build:prod": "cross-env NODE_ENV=production tsc",
-    "start:prod": "cross-env NODE_ENV=production node dist/server.js"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "dependencies": {
-    "@types/morgan": "^1.9.9",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.8",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1",
-    "morgan": "^1.10.0",
+    "mongoose": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "zod": "^3.24.2"
+    "swagger-ui-express": "^5.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.14",
-    "@types/mongoose": "^5.11.0",
-    "@types/node": "^20.10.5",
-    "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "ts-jest": "^29.3.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.37.0",
+    "jest": "^29.5.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.3"
   }
 }
